<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <!-- Top background -->
    <View
        android:id="@+id/topShape"
        style="@style/TopShape"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:alpha="0.45"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Header -->
    <LinearLayout
        android:id="@+id/headerLayout"
        style="@style/Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Back -->
        <LinearLayout
            android:id="@+id/backContainer"
            style="@style/BackBtn.Box"
            android:layout_marginBottom="14dp">

            <ImageView
                android:id="@+id/btnBack"
                style="@style/BackBtn.Icon"
                android:contentDescription="@string/back"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvResetTitle"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password" />

        <TextView
            android:id="@+id/tvResetSubtitle"
            style="@style/Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/reset_password_subtitle" />
    </LinearLayout>

    <!-- Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/resetCard"
        style="@style/Card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/Card.Padding">

            <TextView
                style="@style/Text.Section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/account_recovery"/>

            <TextView
                style="@style/Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/resetEmailLayout"
                style="@style/Input.Rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/enter_your_email"
                app:startIconDrawable="@drawable/ic_mail"
                app:startIconTint="@color/input_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etResetEmail"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendReset"
                style="@style/Btn.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_reset_link"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>